--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.13",
     "@types/leaflet": "^1.7.4",
     "@types/node": "^16.3.1",
+    "@types/node-fetch": "^2.5.12",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
@@ -42,10 +43,10 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "isomorphic-unfetch": "^3.1.0",
     "leaflet": "^1.7.1",
     "markdown-to-jsx": "^7.1.3",
     "mongodb": "^4.0.1",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
