--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@overwolf/types": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/leaflet": "^1.7.4",
+    "@types/leaflet.markercluster": "^1.4.5",
     "@types/node": "^16.3.1",
     "@types/node-fetch": "^2.5.12",
     "@types/react": "^17.0.14",
@@ -43,6 +44,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.0",
     "markdown-to-jsx": "^7.1.3",
     "mongodb": "^4.0.1",
     "node-fetch": "^2.6.1",
