--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "node dist/server/server.js"
   },
   "devDependencies": {
-    "@overwolf/types": "^3.8.0",
+    "@overwolf/types": "3.1.0",
     "@types/express": "^4.17.13",
     "@types/leaflet": "^1.7.4",
     "@types/leaflet.markercluster": "^1.4.5",
