--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vite": "^2.5.0"
   },
   "dependencies": {
+    "@geoman-io/leaflet-geoman-free": "^2.11.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "leaflet": "^1.7.1",
