--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/express": "^4.17.13",
     "@types/leaflet": "^1.7.4",
     "@types/leaflet.markercluster": "^1.4.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.6.2",
     "@types/node-fetch": "^2.5.12",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/sharp": "^0.28.5",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "@vitejs/plugin-react-refresh": "^1.3.6",
@@ -48,10 +50,12 @@
     "leaflet.markercluster": "^1.5.0",
     "markdown-to-jsx": "^7.1.3",
     "mongodb": "^4.1.0",
+    "multer": "^1.4.3",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-twitter-widgets": "^1.10.0",
+    "sharp": "^0.29.0",
     "tesseract.js": "^2.1.5"
   }
 }
