🐛 Fix reload markers

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "client:dev": "vite",
-    "server:dev": "ts-node-dev --project tsconfig.server.json src/server",
+    "server:dev": "ts-node-dev --ignore-watch src/app --project tsconfig.server.json src/server ",
     "client:build": "vite build",
     "server:build": "tsc --project tsconfig.server.json",
     "build": "npm run server:build && npm run client:build",
