📝 Rename App to Aeternum Map

--- a/.github/workflows/overwolf-app.yml
+++ b/.github/workflows/overwolf-app.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Archive Release
         uses: thedoctor0/zip-release@master
         with:
-          filename: 'new-world-companion.opk'
+          filename: 'aeternum-map.opk'
           directory: 'dist/overwolf'
       - name: Create Release
         id: create_release
@@ -48,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./dist/overwolf/new-world-companion.opk
-          asset_name: new-world-companion.opk
+          asset_path: ./dist/overwolf/aeternum-map.opk
+          asset_name: aeternum-map.opk
           asset_content_type: application/zip
