--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: new-world-companion
+  IMAGE_NAME: aeternum-map
 
 jobs:
   # Run tests.
