--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@overwolf/types": "3.12.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/leaflet": "^1.7.5",
     "@types/leaflet.markercluster": "^1.4.5",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "@geoman-io/leaflet-geoman-free": "^2.11.2",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "leaflet": "^1.7.1",
