✨ Notificate in Discord about markers and comments

--- a/template.env
+++ b/template.env
@@ -2,3 +2,4 @@ PORT=3001
 MONGODB_URI==mongodb://localhost:27017/aeternum-map
 VITE_API_ENDPOINT=http://localhost:3001
 SCREENSHOTS_PATH=data/screenshots
+DISCORD_WEBHOOK_URL=
