--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@overwolf/types": "3.12.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/isomorphic-fetch": "^0.0.35",
     "@types/leaflet": "^1.7.5",
     "@types/leaflet.markercluster": "^1.4.5",
     "@types/multer": "^1.4.7",
@@ -48,12 +49,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "isomorphic-fetch": "^3.0.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.1",
     "markdown-to-jsx": "^7.1.3",
     "mongodb": "^4.1.1",
     "multer": "^1.4.3",
-    "node-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-twitter-widgets": "^1.10.0",
