--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "node dist/server/server.js"
   },
   "devDependencies": {
-    "@overwolf/types": "3.12.0",
+    "@overwolf/types": "^3.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/isomorphic-fetch": "^0.0.35",
